# youtube-digest

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  config.example.json  dashboard.py  get_transcripts.py  get_videos.py  main.py  pyproject.toml  requirements.txt  send_email.py  write_articles.py
.github/workflows/: ci.yml  smoke.yml
deploy/: docker-compose.yml
deploy/systemd/: README.md  youtube-digest.service  youtube-digest.timer
docs/: architecture.md  content-modes.md  cost-control.md  deployment-vps.md  hermes-skill.md  llm-providers.md
docs/releases/: v0.1.0.md
scripts/: quality.sh  smoke_test.py
skills/hermes-youtube-digest/: SKILL.md
tests/: test_cli.py  test_config.py  test_digest_naming.py  test_expansion.py  test_llm_provider_config.py  test_magazine_prompt.py  test_metrics.py  test_pipeline_dry_run.py  test_prompts.py  test_reliability_and_reuse.py  test_result_json.py  test_source_notes.py  test_storage.py  test_youtube_video_url.py
tests/fixtures/: videos.json
youtube_digest/: __init__.py  __main__.py  cli.py  config.py  errors.py  models.py  pipeline.py
youtube_digest/delivery/: __init__.py  archive.py  email.py  naming.py
youtube_digest/discovery/: __init__.py  youtube.py
youtube_digest/ebook/: __init__.py  epub_builder.py  html_builder.py
youtube_digest/llm/: anthropic_writer.py  base.py  gemini_writer.py  openai_compatible_writer.py
youtube_digest/processing/: __init__.py  metrics.py  prompts.py
youtube_digest/storage/: artifacts.py  sqlite.py
(+5 files in other folders)
